gcc/testsuite/rust/compile/ref_pattern_fn_param.rs
fn f(&b: i32) {} // { dg-error "expected i32, found reference" }
